typescript/checker/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode6.ts.stderr
error: TS1100
 --> $DIR/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode6.ts:2:1
  |
2 | eval++;
  | ^^^^

error: CannotAssignToNonVariable {
    span: Span {
        lo: BytePos(
            14,
        ),
        hi: BytePos(
            18,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode6.ts:2:1
  |
2 | eval++;
  | ^^^^

